devportal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devportal
  labels:
    app: registry-test
spec:
  selector:
    matchLabels:
      app: registry-test-devportal
  template:
    metadata:
      labels:
        app: registry-test-devportal
    spec:
      volumes:
        - name: devportal-pv
          persistentVolumeClaim:
            claimName: devportal-pvc
      containers:
        - name: devportal
          image: caddy:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: "/usr/share/caddy"
              name: devportal-pv
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: devportal
spec:
  type: LoadBalancer
  selector:
    app: registry-test-devportal
  ports:
    - port: 8888
      protocol: TCP
      targetPort: 80
