envoy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: envoy
  labels:
    app: registry-test
    svc: envoy
spec:
  selector:
    matchLabels:
      app: registry-test-envoy
      svc: envoy
  template:
    metadata:
      labels:
        app: registry-test-envoy
        svc: envoy
    spec:
      containers:
        - name: envoy
          image: envoyproxy/envoy:v1.17-latest
          command: ["/usr/local/bin/envoy"]
          args:
            - --config-path /usr/local/etc/envoy/envoy.yaml
            - --service-cluster front-proxy
            - --log-level info
            - --component-log-level filter:trace,http:debug,router:debug
          ports:
            - name: web
              containerPort: 8000
            - name: admin
              containerPort: 8001
          volumeMounts:
            - name: config
              mountPath: /usr/local/etc/envoy
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: envoy
            items:
              - key: envoy.yaml
                path: envoy.yaml
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: envoy
  labels:
    app: registry-test
spec:
  selector:
    app: registry-test-envoy
    svc: envoy
  ports:
    - name: web
      port: 8000
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-registry-test
spec:
  rules:
    - host: "registry-test.127.0.0.1.nip.io"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: envoy
                port:
                  number: 8000
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: envoy
  labels:
    app: registry-test
data:
  envoy.yaml: |
    static_resources:
      listeners:
      - address:
          socket_address:
            address: 0.0.0.0
            port_value: 8000
        filter_chains:
        - filters:
          - name: envoy.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              stat_prefix: local
              route_config:
                name: local_route
                virtual_hosts:
                - name: local_service
                  domains: ['*']
                  routes:
                  - match:
                      prefix: "/200"
                    direct_response:
                      status: 200
                      body:
                        inline_string: 'gotit!'
                  - match:
                      prefix: "/registry/"
                    route:
                      prefix_rewrite: "/"
                      cluster: registry-cluster
                  - match: { prefix: /api/ }
                    route:
                      prefix_rewrite: "/"
                      cluster: httpbin-cluster
              http_filters:
              - name: envoy.filters.http.cors
              - name: envoy.filters.http.router
                typed_config: {}
              use_remote_address: true
      clusters:
      - name: registry-cluster
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        upstream_connection_options:
          tcp_keepalive:
            keepalive_time: 1
            keepalive_interval: 10
        load_assignment:
          cluster_name: registry-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: registry
                    port_value: 9090
      - name: httpbin-cluster
        connect_timeout: 0.25s
        type: strict_dns
        lb_policy: round_robin
        upstream_connection_options:
          tcp_keepalive:
            keepalive_time: 1
            keepalive_interval: 10
        load_assignment:
          cluster_name: httpbin-cluster
          endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: httpbin
                    port_value: 80
    admin:
      access_log_path: "/tmp/admin_access.log"
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8001
