httpbin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  labels:
    app: registry-test
spec:
  selector:
    matchLabels:
      app: registry-test-httpbin
  template:
    metadata:
      labels:
        app: registry-test-httpbin
    spec:
      containers:
        - name: httpbin
          image: kennethreitz/httpbin
          ports:
            - containerPort: 80
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
spec:
  selector:
    app: registry-test-httpbin
  ports:
    - port: 80
      protocol: TCP
