registry-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  labels:
    app: registry-test
spec:
  selector:
    matchLabels:
      app: registry-test-registry
  template:
    metadata:
      labels:
        app: registry-test-registry
    spec:
      containers:
        - name: registry
          image: apicurio/apicurio-registry-sql:2.1.4.Final
          ports:
            - containerPort: 8080
          env:
            - name: LOG_LEVEL
              value: FINEST
            - name: REGISTRY_DATASOURCE_URL
              value: jdbc:postgresql://registry-database/registry-test
            - name: REGISTRY_DATASOURCE_USERNAME
              valueFrom:
                secretKeyRef:
                  name: registry-database
                  key: POSTGRESQL_USER
            - name: REGISTRY_DATASOURCE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: registry-database
                  key: POSTGRESQL_PASSWORD
          resources: { }
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: registry
spec:
  selector:
    app: registry-test-registry
  ports:
    - port: 9090
      targetPort: 8080
      protocol: TCP
